# btc_bot

./: README.md
btc_bot/: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  backtest.py  bot.py  notify.py  pyproject.toml  trading_log.md
btc_bot/.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
btc_bot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
btc_bot/.github/workflows/: ci.yml
btc_bot/tests/: test_backtest.py  test_bot.py
caretrack-ai/: .env.example  .gitignore  README.md  docker-compose.yml
caretrack-ai/backend/: Dockerfile  alembic.ini  requirements.txt  seed_data.py
caretrack-ai/backend/app/: config.py  main.py
caretrack-ai/backend/app/models/: __init__.py  allergy.py  lab_result.py  medication.py  patient.py  reminder.py  risk_assessment.py  visit.py  vital.py
caretrack-ai/backend/app/routers/: allergies.py  labs.py  medications.py  patients.py  reminders.py  risk.py  summary.py  visits.py  vitals.py
caretrack-ai/backend/app/schemas/: __init__.py  allergy.py  lab_result.py  medication.py  patient.py  reminder.py  risk_assessment.py  visit.py  vital.py
caretrack-ai/backend/app/services/: risk_engine.py  summary_generator.py
caretrack-ai/backend/migrations/: env.py
caretrack-ai/backend/tests/: conftest.py  test_patients.py  test_risk.py  test_summary.py
caretrack-ai/frontend/: Dockerfile  package-lock.json  package.json
caretrack-ai/frontend/public/: index.html
caretrack-ai/frontend/src/: App.tsx
(+19 files in other folders)
