[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "btc-bot"
version = "1.1.0"
description = "BTC/USDT paper trading bot — Triple RSI + MA200 strategy"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.2.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
